parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDAND
    COMPLEX
    END
    EXPS
    FIRE
    G1
    LPAREN
    LSQUAREPAREN
    MACHINE
    OROR
    PERFORM
    RPAREN
    RSQUAREPAREN
    TIL
    UNTIL
    WORK

Grammar

Rule 0     S' -> yapl_mnm
Rule 1     yapl_mnm -> exp yapl_mnm
Rule 2     yapl_mnm -> assign_identifier yapl_mnm
Rule 3     yapl_mnm -> snake_list yapl_mnm
Rule 4     yapl_mnm -> snake_list_access yapl_mnm
Rule 5     yapl_mnm -> rel_exp yapl_mnm
Rule 6     yapl_mnm -> empty
Rule 7     yapl_mnm -> MAYBE rel_exp compoundstmt
Rule 8     yapl_mnm -> MAYBE rel_exp compoundstmt OR compoundstmt
Rule 9     compoundstmt -> LBRACE statements RBRACE
Rule 10    statements -> yapl_mnm SEMICOLON statements
Rule 11    statements -> <empty>
Rule 12    snake_list -> SNAKE IDENTIFIER EQUAL num_snake
Rule 13    snake_list -> SNAKE IDENTIFIER EQUAL string_snake
Rule 14    snake_list -> SNAKE IDENTIFIER EQUAL bool_snake
Rule 15    snake_list_access -> ACCESS IDENTIFIER NUMBER
Rule 16    num_snake -> num_snake COMMA NUMBER
Rule 17    num_snake -> NUMBER
Rule 18    num_snake -> empty
Rule 19    string_snake -> string_snake COMMA STRING
Rule 20    string_snake -> STRING
Rule 21    string_snake -> empty
Rule 22    bool_snake -> bool_snake COMMA bool
Rule 23    bool_snake -> bool
Rule 24    empty -> <empty>
Rule 25    assign_identifier -> SUPPOSE IDENTIFIER EQUAL exp
Rule 26    assign_identifier -> IDENTIFIER EQUAL exp
Rule 27    exp -> exp TIMES exp
Rule 28    exp -> exp DIVIDE exp
Rule 29    exp -> exp PLUS exp
Rule 30    exp -> exp MINUS exp
Rule 31    exp -> exp MOD exp
Rule 32    exp -> exp PLUSPLUS
Rule 33    exp -> exp MINUSMINUS
Rule 34    exp -> MINUS exp
Rule 35    exp -> NUMBER
Rule 36    exp -> STRING
Rule 37    exp -> bool
Rule 38    bool -> TRUE
Rule 39    bool -> FALSE
Rule 40    exp -> IDENTIFIER
Rule 41    rel_exp -> exp GE exp
Rule 42    rel_exp -> exp GT exp
Rule 43    rel_exp -> exp LE exp
Rule 44    rel_exp -> exp LT exp
Rule 45    rel_exp -> exp EQUALEQUAL exp
Rule 46    rel_exp -> exp NOT EQUAL exp

Terminals, with rules where they appear

ACCESS               : 15
ANDAND               : 
COMMA                : 16 19 22
COMPLEX              : 
DIVIDE               : 28
END                  : 
EQUAL                : 12 13 14 25 26 46
EQUALEQUAL           : 45
EXPS                 : 
FALSE                : 39
FIRE                 : 
G1                   : 
GE                   : 41
GT                   : 42
IDENTIFIER           : 12 13 14 15 25 26 40
LBRACE               : 9
LE                   : 43
LPAREN               : 
LSQUAREPAREN         : 
LT                   : 44
MACHINE              : 
MAYBE                : 7 8
MINUS                : 30 34
MINUSMINUS           : 33
MOD                  : 31
NOT                  : 46
NUMBER               : 15 16 17 35
OR                   : 8
OROR                 : 
PERFORM              : 
PLUS                 : 29
PLUSPLUS             : 32
RBRACE               : 9
RPAREN               : 
RSQUAREPAREN         : 
SEMICOLON            : 10
SNAKE                : 12 13 14
STRING               : 19 20 36
SUPPOSE              : 25
TIL                  : 
TIMES                : 27
TRUE                 : 38
UNTIL                : 
WORK                 : 
error                : 

Nonterminals, with rules where they appear

assign_identifier    : 2
bool                 : 22 23 37
bool_snake           : 14 22
compoundstmt         : 7 8 8
empty                : 6 18 21
exp                  : 1 25 26 27 27 28 28 29 29 30 30 31 31 32 33 34 41 41 42 42 43 43 44 44 45 45 46 46
num_snake            : 12 16
rel_exp              : 5 7 8
snake_list           : 3
snake_list_access    : 4
statements           : 9 10
string_snake         : 13 19
yapl_mnm             : 1 2 3 4 5 10 0

Parsing method: LALR

state 0

    (0) S' -> . yapl_mnm
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MAYBE           shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    yapl_mnm                       shift and go to state 1
    exp                            shift and go to state 2
    assign_identifier              shift and go to state 3
    snake_list                     shift and go to state 4
    snake_list_access              shift and go to state 5
    rel_exp                        shift and go to state 6
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 1

    (0) S' -> yapl_mnm .



state 2

    (1) yapl_mnm -> exp . yapl_mnm
    (27) exp -> exp . TIMES exp
    (28) exp -> exp . DIVIDE exp
    (29) exp -> exp . PLUS exp
    (30) exp -> exp . MINUS exp
    (31) exp -> exp . MOD exp
    (32) exp -> exp . PLUSPLUS
    (33) exp -> exp . MINUSMINUS
    (41) rel_exp -> exp . GE exp
    (42) rel_exp -> exp . GT exp
    (43) rel_exp -> exp . LE exp
    (44) rel_exp -> exp . LT exp
    (45) rel_exp -> exp . EQUALEQUAL exp
    (46) rel_exp -> exp . NOT EQUAL exp
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MOD             shift and go to state 24
    PLUSPLUS        shift and go to state 25
    MINUSMINUS      shift and go to state 26
    GE              shift and go to state 27
    GT              shift and go to state 28
    LE              shift and go to state 29
    LT              shift and go to state 30
    EQUALEQUAL      shift and go to state 31
    NOT             shift and go to state 32
    MAYBE           shift and go to state 8
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    SEMICOLON       reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    exp                            shift and go to state 2
    yapl_mnm                       shift and go to state 19
    assign_identifier              shift and go to state 3
    snake_list                     shift and go to state 4
    snake_list_access              shift and go to state 5
    rel_exp                        shift and go to state 6
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 3

    (2) yapl_mnm -> assign_identifier . yapl_mnm
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MAYBE           shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    SEMICOLON       reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    assign_identifier              shift and go to state 3
    yapl_mnm                       shift and go to state 33
    exp                            shift and go to state 2
    snake_list                     shift and go to state 4
    snake_list_access              shift and go to state 5
    rel_exp                        shift and go to state 6
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 4

    (3) yapl_mnm -> snake_list . yapl_mnm
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MAYBE           shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    SEMICOLON       reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    snake_list                     shift and go to state 4
    yapl_mnm                       shift and go to state 34
    exp                            shift and go to state 2
    assign_identifier              shift and go to state 3
    snake_list_access              shift and go to state 5
    rel_exp                        shift and go to state 6
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 5

    (4) yapl_mnm -> snake_list_access . yapl_mnm
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MAYBE           shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    SEMICOLON       reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    snake_list_access              shift and go to state 5
    yapl_mnm                       shift and go to state 35
    exp                            shift and go to state 2
    assign_identifier              shift and go to state 3
    snake_list                     shift and go to state 4
    rel_exp                        shift and go to state 6
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 6

    (5) yapl_mnm -> rel_exp . yapl_mnm
    (1) yapl_mnm -> . exp yapl_mnm
    (2) yapl_mnm -> . assign_identifier yapl_mnm
    (3) yapl_mnm -> . snake_list yapl_mnm
    (4) yapl_mnm -> . snake_list_access yapl_mnm
    (5) yapl_mnm -> . rel_exp yapl_mnm
    (6) yapl_mnm -> . empty
    (7) yapl_mnm -> . MAYBE rel_exp compoundstmt
    (8) yapl_mnm -> . MAYBE rel_exp compoundstmt OR compoundstmt
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (25) assign_identifier -> . SUPPOSE IDENTIFIER EQUAL exp
    (26) assign_identifier -> . IDENTIFIER EQUAL exp
    (12) snake_list -> . SNAKE IDENTIFIER EQUAL num_snake
    (13) snake_list -> . SNAKE IDENTIFIER EQUAL string_snake
    (14) snake_list -> . SNAKE IDENTIFIER EQUAL bool_snake
    (15) snake_list_access -> . ACCESS IDENTIFIER NUMBER
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (24) empty -> .
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MAYBE           shift and go to state 8
    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 13
    SUPPOSE         shift and go to state 14
    SNAKE           shift and go to state 15
    ACCESS          shift and go to state 16
    $end            reduce using rule 24 (empty -> .)
    SEMICOLON       reduce using rule 24 (empty -> .)
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    rel_exp                        shift and go to state 6
    yapl_mnm                       shift and go to state 36
    exp                            shift and go to state 2
    assign_identifier              shift and go to state 3
    snake_list                     shift and go to state 4
    snake_list_access              shift and go to state 5
    empty                          shift and go to state 7
    bool                           shift and go to state 12

state 7

    (6) yapl_mnm -> empty .

    $end            reduce using rule 6 (yapl_mnm -> empty .)
    SEMICOLON       reduce using rule 6 (yapl_mnm -> empty .)


state 8

    (7) yapl_mnm -> MAYBE . rel_exp compoundstmt
    (8) yapl_mnm -> MAYBE . rel_exp compoundstmt OR compoundstmt
    (41) rel_exp -> . exp GE exp
    (42) rel_exp -> . exp GT exp
    (43) rel_exp -> . exp LE exp
    (44) rel_exp -> . exp LT exp
    (45) rel_exp -> . exp EQUALEQUAL exp
    (46) rel_exp -> . exp NOT EQUAL exp
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 39
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    rel_exp                        shift and go to state 37
    exp                            shift and go to state 38
    bool                           shift and go to state 12

state 9

    (34) exp -> MINUS . exp
    (27) exp -> . exp TIMES exp
    (28) exp -> . exp DIVIDE exp
    (29) exp -> . exp PLUS exp
    (30) exp -> . exp MINUS exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp PLUSPLUS
    (33) exp -> . exp MINUSMINUS
    (34) exp -> . MINUS exp
    (35) exp -> . NUMBER
    (36) exp -> . STRING
    (37) exp -> . bool
    (40) exp -> . IDENTIFIER
    (38) bool -> . TRUE
    (39) bool -> . FALSE

    MINUS           shift and go to state 9
    NUMBER          shift and go to state 10
    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 39
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    exp                            shift and go to state 40
    bool                           shift and go to state 12

state 10

    (35) exp -> NUMBER .

    TIMES           reduce using rule 35 (exp -> NUMBER .)
    DIVIDE          reduce using rule 35 (exp -> NUMBER .)
    PLUS            reduce using rule 35 (exp -> NUMBER .)
    MINUS           reduce using rule 35 (exp -> NUMBER .)
    MOD             reduce using rule 35 (exp -> NUMBER .)
    PLUSPLUS        reduce using rule 35 (exp -> NUMBER .)
    MINUSMINUS      reduce using rule 35 (exp -> NUMBER .)
    GE              reduce using rule 35 (exp -> NUMBER .)
    GT              reduce using rule 35 (exp -> NUMBER .)
    LE              reduce using rule 35 (exp -> NUMBER .)
    LT              reduce using rule 35 (exp -> NUMBER .)
    EQUALEQUAL      reduce using rule 35 (exp -> NUMBER .)
    NOT             reduce using rule 35 (exp -> NUMBER .)
    MAYBE           reduce using rule 35 (exp -> NUMBER .)
    NUMBER          reduce using rule 35 (exp -> NUMBER .)
    STRING          reduce using rule 35 (exp -> NUMBER .)
    IDENTIFIER      reduce using rule 35 (exp -> NUMBER .)
    SUPPOSE         reduce using rule 35 (exp -> NUMBER .)
    SNAKE           reduce using rule 35 (exp -> NUMBER .)
    ACCESS          reduce using rule 35 (exp -> NUMBER .)
    TRUE            reduce using rule 35 (exp -> NUMBER .)
    FALSE           reduce using rule 35 (exp -> NUMBER .)
    $end            reduce using rule 35 (exp -> NUMBER .)
    SEMICOLON       reduce using rule 35 (exp -> NUMBER .)
    LBRACE          reduce using rule 35 (exp -> NUMBER .)


state 11

    (36) exp -> STRING .

    TIMES           reduce using rule 36 (exp -> STRING .)
    DIVIDE          reduce using rule 36 (exp -> STRING .)
    PLUS            reduce using rule 36 (exp -> STRING .)
    MINUS           reduce using rule 36 (exp -> STRING .)
    MOD             reduce using rule 36 (exp -> STRING .)
    PLUSPLUS        reduce using rule 36 (exp -> STRING .)
    MINUSMINUS      reduce using rule 36 (exp -> STRING .)
    GE              reduce using rule 36 (exp -> STRING .)
    GT              reduce using rule 36 (exp -> STRING .)
    LE              reduce using rule 36 (exp -> STRING .)
    LT              reduce using rule 36 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 36 (exp -> STRING .)
    NOT             reduce using rule 36 (exp -> STRING .)
    MAYBE           reduce using rule 36 (exp -> STRING .)
    NUMBER          reduce using rule 36 (exp -> STRING .)
    STRING          reduce using rule 36 (exp -> STRING .)
    IDENTIFIER      reduce using rule 36 (exp -> STRING .)
    SUPPOSE         reduce using rule 36 (exp -> STRING .)
    SNAKE           reduce using rule 36 (exp -> STRING .)
    ACCESS          reduce using rule 36 (exp -> STRING .)
    TRUE            reduce using rule 36 (exp -> STRING .)
    FALSE           reduce using rule 36 (exp -> STRING .)
    $end            reduce using rule 36 (exp -> STRING .)
    SEMICOLON       reduce using rule 36 (exp -> STRING .)
    LBRACE          reduce using rule 36 (exp -> STRING .)


state 12

    (37) exp -> bool .

    TIMES           reduce using rule 37 (exp -> bool .)
    DIVIDE          reduce using rule 37 (exp -> bool .)
    PLUS            reduce using rule 37 (exp -> bool .)
    MINUS           reduce using rule 37 (exp -> bool .)
    MOD             reduce using rule 37 (exp -> bool .)
    PLUSPLUS        reduce using rule 37 (exp -> bool .)
    MINUSMINUS      reduce using rule 37 (exp -> bool .)
    GE              reduce using rule 37 (exp -> bool .)
    GT              reduce using rule 37 (exp -> bool .)
    LE              reduce using rule 37 (exp -> bool .)
    LT              reduce using rule 37 (exp -> bool .)
    EQUALEQUAL      reduce using rule 37 (exp -> bool .)
    NOT             reduce using rule 37 (exp -> bool .)
    MAYBE           reduce using rule 37 (exp -> bool .)
    NUMBER          reduce using rule 37 (exp -> bool .)
    STRING          reduce using rule 37 (exp -> bool .)
    IDENTIFIER      reduce using rule 37 (exp -> bool .)
    SUPPOSE         reduce using rule 37 (exp -> bool .)
    SNAKE           reduce using rule 37 (exp -> bool .)
    ACCESS          reduce using rule 37 (exp -> bool .)
    TRUE            reduce using rule 37 (exp -> bool .)
    FALSE           reduce using rule 37 (exp -> bool .)
    $end            reduce using rule 37 (exp -> bool .)
    SEMICOLON       reduce using rule 37 (exp -> bool .)
    LBRACE          reduce using rule 37 (exp -> bool .)


state 13

    (40) exp -> IDENTIFIER .
    (26) assign_identifier -> IDENTIFIER . EQUAL exp

    TIMES           reduce using rule 40 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 40 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 40 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 40 (exp -> IDENTIFIER .)
    MOD             reduce using rule 40 (exp -> IDENTIFIER .)
    PLUSPLUS        reduce using rule 40 (exp -> IDENTIFIER .)
    MINUSMINUS      reduce using rule 40 (exp -> IDENTIFIER .)
    GE              reduce using rule 40 (exp -> IDENTIFIER .)
    GT              reduce using rule 40 (exp -> IDENTIFIER .)
    LE              reduce using rule 40 (exp -> IDENTIFIER .)
    LT              reduce using rule 40 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 40 (exp -> IDENTIFIER .)
    NOT             reduce using rule 40 (exp -> IDENTIFIER .)
    MAYBE           reduce using rule 40 (exp -> IDENTIFIER .)
    NUMBER          reduce using rule 40 (exp -> IDENTIFIER .)
    STRING          reduce using rule 40 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 40 (exp -> IDENTIFIER .)
    SUPPOSE         reduce using rule 40 (exp -> IDENTIFIER .)
    SNAKE           reduce using rule 40 (exp -> IDENTIFIER .)
    ACCESS          reduce using rule 40 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 40 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 40 (exp -> IDENTIFIER .)
    $end            reduce using rule 40 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 40 (exp -> IDENTIFIER .)
    EQUAL           shift and go to state 41


state 14

    (25) assign_identifier -> SUPPOSE . IDENTIFIER EQUAL exp

    IDENTIFIER      shift and go to state 42


state 15

    (12) snake_list -> SNAKE . IDENTIFIER EQUAL num_snake
    (13) snake_list -> SNAKE . IDENTIFIER EQUAL string_snake
    (14) snake_list -> SNAKE . IDENTIFIER EQUAL bool_snake

    IDENTIFIER      shift and go to state 43


state 16

    (15) snake_list_access -> ACCESS . IDENTIFIER NUMBER

    IDENTIFIER      shift and go to state 44


state 17

    (38) bool -> TRUE .

    TIMES           reduce using rule 38 (bool -> TRUE .)
    DIVIDE          reduce using rule 38 (bool -> TRUE .)
    PLUS            reduce using rule 38 (bool -> TRUE .)
    MINUS           reduce using rule 38 (bool -> TRUE .)
    MOD             reduce using rule 38 (bool -> TRUE .)
    PLUSPLUS        reduce using rule 38 (bool -> TRUE .)
    MINUSMINUS      reduce using rule 38 (bool -> TRUE .)
    GE              reduce using rule 38 (bool -> TRUE .)
    GT              reduce using rule 38 (bool -> TRUE .)
    LE              reduce using rule 38 (bool -> TRUE .)
    LT              reduce using rule 38 (bool -> TRUE .)
    EQUALEQUAL      reduce using rule 38 (bool -> TRUE .)
    NOT             reduce using rule 38 (bool -> TRUE .)
    MAYBE           reduce using rule 38 (bool -> TRUE .)
    NUMBER          reduce using rule 38 (bool -> TRUE .)
    STRING          reduce using rule 38 (bool -> TRUE .)
    IDENTIFIER      reduce using rule 38 (bool -> TRUE .)
    SUPPOSE         reduce using rule 38 (bool -> TRUE .)
    SNAKE           reduce using rule 38 (bool -> TRUE .)
    ACCESS          reduce using rule 38 (bool -> TRUE .)
    TRUE            reduce using rule 38 (bool -> TRUE .)
    FALSE           reduce using rule 38 (bool -> TRUE .)
    $end            reduce using rule 38 (bool -> TRUE .)
    SEMICOLON       reduce using rule 38 (bool -> TRUE .)
    LBRACE          reduce using rule 38 (bool -> TRUE .)
    COMMA           reduce using rule 38 (bool -> TRUE .)


state 18

    (39) bool -> FALSE .
